2008-09-25  Martyn Russell  <martyn@imendio.com>

	* Makefile.am:
	* configure.ac: Added a message about the file removal of old data
	and binary files from older Tracker projects after the initial
	configure script has run.

2008-09-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer.c
	(index_metadata_item): The score must be positive when we are 
	adding words to the index. 
	
2008-09-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db.c
	(tracker_db_create_array_of_services): Added missing "Applications"
	category. We were filtering all application results in the daemon.
	
2008-09-25  Martyn Russell  <martyn@imendio.com>

	* Makefile.am: Improve this so we don't use all-local and instead
	use install-exec-hook and install-data-hook.
	
	* src/libtracker-db/tracker-db-manager.c: Added functions to check
	database versions to know if we should reindex or not.

2008-09-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (process_file): Don't give up
	on the whole file if the URI can't be extracted for any contained
	item.

2008-09-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/module/evolution.c
	(tracker_module_file_get_data) (tracker_module_file_iter_contents):
	Get the Message UID before reading metadata, since we'll need it for
	tracker_module_file_get_uri().
	(get_metadata_for_imap): Remove UID parsing from here.

2008-09-25  Carlos Garnacho  <carlos@imendio.com>

	Do not break on 64-bit platforms. Based on a patch by Laurent 
	Aguerreche  <laurent.aguerreche@free.fr>

	* src/tracker-indexer/modules/evolution.c (read_summary): time_t will
	have different width in other platforms.
	(read_summary_header): Add comments to skipped summary elements.

2008-09-25  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-index.c (tracker_db_index_open): Be
	more graceful when the index is already open.